0025075: BRepMesh - eliminate new x86_64 compiler warnings

BRepMesh - fix compilation without TBB support

Code style